Fixed the final_df 'ticker' column

--- a/version2.ipynb
+++ b/version2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +106,12 @@
     "prices_df = sf.load_shareprices(variant='daily')\n",
     "\n",
     "# Print the first rows of the data.\n",
-    "list(prices_df.columns)\n",
     "print(prices_df.info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +804,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Report Date', 'SimFinId', 'Currency', 'Fiscal Year', 'Fiscal Period',\n",
+       "       'Publish Date', 'Restated Date', 'Shares (Basic)', 'Shares (Diluted)',\n",
+       "       'Revenue', 'Cost of Revenue', 'Gross Profit', 'Operating Expenses',\n",
+       "       'Selling, General & Administrative', 'Research & Development',\n",
+       "       'Depreciation & Amortization', 'Operating Income (Loss)',\n",
+       "       'Non-Operating Income (Loss)', 'Interest Expense, Net',\n",
+       "       'Pretax Income (Loss), Adj.', 'Abnormal Gains (Losses)',\n",
+       "       'Pretax Income (Loss)', 'Income Tax (Expense) Benefit, Net',\n",
+       "       'Income (Loss) from Continuing Operations',\n",
+       "       'Net Extraordinary Gains (Losses)', 'Net Income', 'Net Income (Common)',\n",
+       "       'Ticker'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_income.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'Date' columns to datetime format\n",
+    "df_prices[\"Date\"] = pd.to_datetime(df_prices[\"Date\"])\n",
+    "df_balance[\"Report Date\"] = pd.to_datetime(df_balance[\"Report Date\"])\n",
+    "df_cashflow[\"Report Date\"] = pd.to_datetime(df_cashflow[\"Report Date\"])\n",
+    "df_income[\"Report Date\"] = pd.to_datetime(df_income[\"Report Date\"])\n",
+    "\n",
+    "# Rename 'Report Date' to 'Date' for consistency\n",
+    "df_balance.rename(columns={\"Report Date\": \"Date\"}, inplace=True)\n",
+    "df_cashflow.rename(columns={\"Report Date\": \"Date\"}, inplace=True)\n",
+    "df_income.rename(columns={\"Report Date\": \"Date\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +908,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       GOOG\n",
+       "1       GOOG\n",
+       "2       GOOG\n",
+       "3       GOOG\n",
+       "4       GOOG\n",
+       "        ... \n",
+       "6145    NFLX\n",
+       "6146    NFLX\n",
+       "6147    NFLX\n",
+       "6148    NFLX\n",
+       "6149    NFLX\n",
+       "Name: Ticker, Length: 6150, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,28 +962,30 @@
     "df_merged = add_technical_indicators(df_merged)\n",
     "\n",
     "# Drop non-numeric columns except 'Price_Up'\n",
-    "df_final = df_merged.select_dtypes(include=[np.number])\n"
+    "# df_final = df_merged.select_dtypes(include=[np.number])\n",
+    "df_final = df_merged.select_dtypes(include=[np.number]).copy()\n",
+    "df_final['Ticker'] = df_merged['Ticker']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_38907/141335596.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_46106/141335596.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df_final[\"Dividend\"].fillna(0, inplace=True)\n",
-      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_38907/141335596.py:6: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_46106/141335596.py:6: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_final.fillna(method=\"ffill\", inplace=True)\n",
-      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_38907/141335596.py:7: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "/var/folders/9q/c733hdkn4x7643llmv4jdfdw0000gn/T/ipykernel_46106/141335596.py:7: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_final.fillna(method=\"bfill\", inplace=True)\n"
      ]
     }
@@ -923,108 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6149 entries, 0 to 6148\n",
-      "Data columns (total 78 columns):\n",
-      " #   Column                                           Non-Null Count  Dtype  \n",
-      "---  ------                                           --------------  -----  \n",
-      " 0   SimFinId                                         6149 non-null   int64  \n",
-      " 1   Open                                             6149 non-null   float64\n",
-      " 2   High                                             6149 non-null   float64\n",
-      " 3   Low                                              6149 non-null   float64\n",
-      " 4   Close                                            6149 non-null   float64\n",
-      " 5   Adj. Close                                       6149 non-null   float64\n",
-      " 6   Volume                                           6149 non-null   int64  \n",
-      " 7   Dividend                                         6149 non-null   float64\n",
-      " 8   Shares Outstanding                               6149 non-null   float64\n",
-      " 9   SimFinId_balance                                 6149 non-null   float64\n",
-      " 10  Fiscal Year                                      6149 non-null   float64\n",
-      " 11  Shares (Basic)                                   6149 non-null   float64\n",
-      " 12  Shares (Diluted)                                 6149 non-null   float64\n",
-      " 13  Cash, Cash Equivalents & Short Term Investments  6149 non-null   float64\n",
-      " 14  Accounts & Notes Receivable                      6149 non-null   float64\n",
-      " 15  Inventories                                      6149 non-null   float64\n",
-      " 16  Total Current Assets                             6149 non-null   float64\n",
-      " 17  Property, Plant & Equipment, Net                 6149 non-null   float64\n",
-      " 18  Long Term Investments & Receivables              6149 non-null   float64\n",
-      " 19  Other Long Term Assets                           6149 non-null   float64\n",
-      " 20  Total Noncurrent Assets                          6149 non-null   float64\n",
-      " 21  Total Assets                                     6149 non-null   float64\n",
-      " 22  Payables & Accruals                              6149 non-null   float64\n",
-      " 23  Short Term Debt                                  6149 non-null   float64\n",
-      " 24  Total Current Liabilities                        6149 non-null   float64\n",
-      " 25  Long Term Debt                                   6149 non-null   float64\n",
-      " 26  Total Noncurrent Liabilities                     6149 non-null   float64\n",
-      " 27  Total Liabilities                                6149 non-null   float64\n",
-      " 28  Share Capital & Additional Paid-In Capital       6149 non-null   float64\n",
-      " 29  Treasury Stock                                   6149 non-null   float64\n",
-      " 30  Retained Earnings                                6149 non-null   float64\n",
-      " 31  Total Equity                                     6149 non-null   float64\n",
-      " 32  Total Liabilities & Equity                       6149 non-null   float64\n",
-      " 33  SimFinId_cashflow                                6149 non-null   float64\n",
-      " 34  Fiscal Year_cashflow                             6149 non-null   float64\n",
-      " 35  Shares (Basic)_cashflow                          6149 non-null   float64\n",
-      " 36  Shares (Diluted)_cashflow                        6149 non-null   float64\n",
-      " 37  Net Income/Starting Line                         6149 non-null   float64\n",
-      " 38  Depreciation & Amortization                      6149 non-null   float64\n",
-      " 39  Non-Cash Items                                   6149 non-null   float64\n",
-      " 40  Change in Working Capital                        6149 non-null   float64\n",
-      " 41  Change in Accounts Receivable                    6149 non-null   float64\n",
-      " 42  Change in Accounts Payable                       6149 non-null   float64\n",
-      " 43  Change in Other                                  6149 non-null   float64\n",
-      " 44  Net Cash from Operating Activities               6149 non-null   float64\n",
-      " 45  Change in Fixed Assets & Intangibles             6149 non-null   float64\n",
-      " 46  Net Change in Long Term Investment               6149 non-null   float64\n",
-      " 47  Net Cash from Acquisitions & Divestitures        6149 non-null   float64\n",
-      " 48  Net Cash from Investing Activities               6149 non-null   float64\n",
-      " 49  Dividends Paid                                   6149 non-null   float64\n",
-      " 50  Cash from (Repayment of) Debt                    6149 non-null   float64\n",
-      " 51  Cash from (Repurchase of) Equity                 6149 non-null   float64\n",
-      " 52  Net Cash from Financing Activities               6149 non-null   float64\n",
-      " 53  Net Change in Cash                               6149 non-null   float64\n",
-      " 54  SimFinId_income                                  6149 non-null   float64\n",
-      " 55  Fiscal Year_income                               6149 non-null   float64\n",
-      " 56  Shares (Basic)_income                            6149 non-null   float64\n",
-      " 57  Shares (Diluted)_income                          6149 non-null   float64\n",
-      " 58  Revenue                                          6149 non-null   float64\n",
-      " 59  Cost of Revenue                                  6149 non-null   float64\n",
-      " 60  Gross Profit                                     6149 non-null   float64\n",
-      " 61  Operating Expenses                               6149 non-null   float64\n",
-      " 62  Selling, General & Administrative                6149 non-null   float64\n",
-      " 63  Research & Development                           6149 non-null   float64\n",
-      " 64  Operating Income (Loss)                          6149 non-null   float64\n",
-      " 65  Non-Operating Income (Loss)                      6149 non-null   float64\n",
-      " 66  Interest Expense, Net                            6149 non-null   float64\n",
-      " 67  Pretax Income (Loss), Adj.                       6149 non-null   float64\n",
-      " 68  Abnormal Gains (Losses)                          6149 non-null   float64\n",
-      " 69  Pretax Income (Loss)                             6149 non-null   float64\n",
-      " 70  Income Tax (Expense) Benefit, Net                6149 non-null   float64\n",
-      " 71  Income (Loss) from Continuing Operations         6149 non-null   float64\n",
-      " 72  Net Income                                       6149 non-null   float64\n",
-      " 73  Net Income (Common)                              6149 non-null   float64\n",
-      " 74  Price_Up                                         6149 non-null   int64  \n",
-      " 75  SMA_5                                            6149 non-null   float64\n",
-      " 76  SMA_10                                           6149 non-null   float64\n",
-      " 77  RSI_14                                           6149 non-null   float64\n",
-      "dtypes: float64(75), int64(3)\n",
-      "memory usage: 3.7 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_final.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
