--- a/v2.ipynb
+++ b/v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,13 @@
     "from sklearn.linear_model import ElasticNet, LogisticRegression\n",
     "from sklearn.metrics import classification_report, roc_curve, roc_auc_score, confusion_matrix\n",
     "\n",
-    "from imblearn.over_sampling import SMOTE\n"
+    "from imblearn.over_sampling import SMOTE\n",
+    "import joblib\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\apoorv\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->simfin) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\apoorv\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->simfin) (2025.1.31)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\apoorv\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas->simfin) (1.17.0)\n",
-      "Dataset \"us-shareprices-daily\" on disk (0 days old).\n",
+      "Dataset \"us-shareprices-daily\" on disk (1 days old).\n",
       "- Loading from disk ... "
      ]
     },
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +340,7 @@
        "[5815913 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset \"us-balance-quarterly\" on disk (12 days old).\n",
+      "Dataset \"us-balance-quarterly\" on disk (14 days old).\n",
       "- Loading from disk ... "
      ]
     },
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +870,7 @@
        "[55918 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,14 +894,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset \"us-income-quarterly\" on disk (12 days old).\n",
+      "Dataset \"us-income-quarterly\" on disk (14 days old).\n",
       "- Loading from disk ... "
      ]
     },
@@ -990,7 +991,7 @@
       "       2020-04-30             101000000  \n",
       "\n",
       "[5 rows x 26 columns]\n",
-      "Dataset \"us-cashflow-quarterly\" on disk (12 days old).\n",
+      "Dataset \"us-cashflow-quarterly\" on disk (14 days old).\n",
       "- Loading from disk ... "
      ]
     },
@@ -1132,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,23 +1349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_79504\\141335596.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_69724\\141335596.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df_final[\"Dividend\"].fillna(0, inplace=True)\n",
-      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_79504\\141335596.py:6: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_69724\\141335596.py:6: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_final.fillna(method=\"ffill\", inplace=True)\n",
-      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_79504\\141335596.py:7: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\Apoorv\\AppData\\Local\\Temp\\ipykernel_69724\\141335596.py:7: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_final.fillna(method=\"bfill\", inplace=True)\n"
      ]
     }
@@ -1381,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1907,7 @@
        "[1239 rows x 78 columns])])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1927,18 +1928,23 @@
       "\n",
       "Processing AAPL...\n",
       "Selected Features for AAPL: ['Open', 'Close', 'Dividend', 'Long Term Debt', 'Non-Cash Items', 'Change in Working Capital', 'Net Cash from Operating Activities', 'Net Change in Long Term Investment', 'Net Cash from Acquisitions & Divestitures', 'Net Cash from Financing Activities']\n",
+      "✅ Scaler for AAPL saved as saved_models/AAPL_selected_f.joblib\n",
       "\n",
       "Processing F...\n",
       "Selected Features for F: ['Open', 'High', 'Volume', 'Shares Outstanding', 'Inventories', 'Total Current Liabilities', 'Non-Cash Items', 'Change in Fixed Assets & Intangibles', 'Net Cash from Acquisitions & Divestitures', 'Net Cash from Investing Activities', 'Income Tax (Expense) Benefit, Net']\n",
+      "✅ Scaler for F saved as saved_models/F_selected_f.joblib\n",
       "\n",
       "Processing GOOG...\n",
       "Selected Features for GOOG: ['Share Capital & Additional Paid-In Capital', 'Depreciation & Amortization', 'Change in Other', 'Net Change in Long Term Investment', 'Net Cash from Acquisitions & Divestitures', 'Dividends Paid', 'Cost of Revenue', 'Research & Development', 'SMA_10', 'RSI_14']\n",
+      "✅ Scaler for GOOG saved as saved_models/GOOG_selected_f.joblib\n",
       "\n",
       "Processing META...\n",
       "Selected Features for META: ['High', 'Close', 'Adj. Close', 'Volume', 'Dividend', 'Total Noncurrent Liabilities', 'Net Income/Starting Line', 'Change in Accounts Receivable', 'Net Cash from Financing Activities', 'Net Change in Cash', 'Income (Loss) from Continuing Operations', 'Net Income', 'Net Income (Common)', 'RSI_14']\n",
+      "✅ Scaler for META saved as saved_models/META_selected_f.joblib\n",
       "\n",
       "Processing NFLX...\n",
-      "Selected Features for NFLX: ['Volume', 'Other Long Term Assets', 'Net Cash from Acquisitions & Divestitures', 'Cash from (Repurchase of) Equity', 'Net Cash from Financing Activities', 'Cost of Revenue', 'SMA_5', 'RSI_14']\n"
+      "Selected Features for NFLX: ['Volume', 'Other Long Term Assets', 'Net Cash from Acquisitions & Divestitures', 'Cash from (Repurchase of) Equity', 'Net Cash from Financing Activities', 'Cost of Revenue', 'SMA_5', 'RSI_14']\n",
+      "✅ Scaler for NFLX saved as saved_models/NFLX_selected_f.joblib\n"
      ]
     }
    ],
@@ -1975,6 +1981,13 @@
     "\n",
     "    print(f\"Selected Features for {ticker}: {selected_features.tolist()}\")\n",
     "\n",
+    "\n",
+    "    selected_f = selected_features.tolist()\n",
+    "    features_filename = f\"saved_models/{ticker}_selected_f.joblib\"\n",
+    "    joblib.dump(selected_f, features_filename) # Save the features\n",
+    "    print(f\"✅ Features for {ticker} saved as {features_filename}\")\n",
+    "\n",
+    "\n",
     "    # Handle class imbalance\n",
     "    smote = SMOTE(sampling_strategy=\"auto\", random_state=42)\n",
     "    X_resampled, y_resampled = smote.fit_resample(X_selected, y)\n",
@@ -1986,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2303,9 +2316,9 @@
       "Unique Values in Predictions: [0.19923877 0.2226986  0.24348664 ... 0.69262545 0.69430017 0.69791516]\n",
       "\n",
       "Checking predictions for NFLX...\n",
-      "Min Probability: 0.10088576756745395\n",
-      "Max Probability: 0.6086136108854854\n",
-      "Unique Values in Predictions: [0.10088577 0.21988183 0.27591979 ... 0.60800451 0.6084118  0.60861361]\n"
+      "Min Probability: 0.10088455273467534\n",
+      "Max Probability: 0.6086158793600367\n",
+      "Unique Values in Predictions: [0.10088455 0.21988311 0.27591734 ... 0.60800678 0.60841382 0.60861588]\n"
      ]
     }
    ],
@@ -2322,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2528,7 @@
     }
    ],
    "source": [
-    "import joblib\n",
+    "\n",
     "import os\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -2526,16 +2539,24 @@
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)  # Apply scaling\n",
     "\n",
+    "\n",
+    "#selected_f = X_train.columns.tolist()\n",
+    "\n",
+    "\n",
     "# Save models and scalers\n",
     "for ticker, model in company_models.items():\n",
     "    model_filename = f\"saved_models/{ticker}_model.joblib\"\n",
     "    scaler_filename = f\"saved_models/{ticker}_scaler.joblib\"\n",
+    "    # features_filename = f\"saved_models/{ticker}_selected_f.joblib\"\n",
+    "\n",
     "    \n",
     "    joblib.dump(model, model_filename)  # Save the trained model\n",
     "    joblib.dump(scaler, scaler_filename)  # Save the scaler\n",
+    "    joblib.dump(selected_f, features_filename) # Save the features\n",
     "\n",
     "    print(f\"✅ Model for {ticker} saved as {model_filename}\")\n",
     "    print(f\"✅ Scaler for {ticker} saved as {scaler_filename}\")\n",
+    "    # print(f\"✅ Scaler for {ticker} saved as {features_filename}\")\n",
     "\n"
    ]
   }
